refactor!: Moved middleare directory and build-fetch.ts to pretch-core

--- a/packages/pretch-preact/deno.json
+++ b/packages/pretch-preact/deno.json
@@ -10,7 +10,8 @@
     "preact": "npm:preact@^10.24.1",
     "@/": "./"
   },
-  "exports": "./mod.ts",
+  "exports": {
+  },
   "compilerOptions": {
     "lib": [
       "dom",
