chore: Update versions of project packages

--- a/packages/pretch-core/deno.json
+++ b/packages/pretch-core/deno.json
@@ -1,5 +1,6 @@
 {
   "name": "@pretch/core",
+  "version": "0.1.0",
   "exports": {
     ".": "./mod.ts",
     "./middleware": "./middleware/mod.ts"
