fix(linter): Added files to format

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -27,7 +27,7 @@ jobs:
           deno-version: v2.x
 
       - name: Check linting
-        run: deno fmt --check
+        run: deno fmt --check .
 
   check-typing:
     needs: setup-enviroment
