ci(test): Changed branches that are pushed to trigger the workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
     branches: [master, development]
   push:
-    branches: [master, development]
+    branches: [development]
 
 jobs:
   test:
