test(pretch-core): Tested build-fetch for sucessful fetch

--- a/deno.json
+++ b/deno.json
@@ -4,6 +4,10 @@
     "./packages/pretch-preact",
     "./packages/pretch-react"
   ],
+  "imports": {
+    "@std/assert": "jsr:@std/assert@1",
+    "@std/expect": "jsr:@std/expect@^1.0.5"
+  },
   "compilerOptions": {
     "lib": [
       "dom",
