--- a/deno.json
+++ b/deno.json
@@ -6,7 +6,8 @@
   ],
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
-    "@std/expect": "jsr:@std/expect@^1.0.5"
+    "@std/expect": "jsr:@std/expect@^1.0.5",
+    "jsdom": "npm:jsdom@^25.0.1"
   },
   "compilerOptions": {
     "lib": [
