chore(preact): Fixed typo in workspace name

--- a/packages/pretch-preact/deno.json
+++ b/packages/pretch-preact/deno.json
@@ -1,5 +1,5 @@
 {
-  "name": "@prefetch/preact",
+  "name": "@pretch/preact",
   "version": "0.1.2",
   "tasks": {
     "doc": "deno doc --html --name='Pretch' src"
