--- a/deno.json
+++ b/deno.json
@@ -5,7 +5,9 @@
     "./packages/pretch-react"
   ],
   "imports": {
+    "@std/assert": "jsr:@std/assert@^1.0.6",
     "@std/expect": "jsr:@std/expect@^1.0.5",
+    "@std/testing": "jsr:@std/testing@^1.0.3",
     "jsdom": "npm:jsdom@^25.0.1"
   },
   "compilerOptions": {
