--- a/.github/workflows/version_bump.yml
+++ b/.github/workflows/version_bump.yml
@@ -14,7 +14,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Deno
-        uses: denoland/setup-deno@v1
+        uses: denoland/setup-deno@v2
+        with:
+          deno-version: v2.x
 
       - name: Run workspaces version bump
         run: |
