--- a/.github/workflows/version_bump.yml
+++ b/.github/workflows/version_bump.yml
@@ -14,13 +14,15 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Deno
-        uses: denoland/setup-deno@v1
+        uses: denoland/setup-deno@v2
+        with:
+          deno-version: v2.x
 
       - name: Run workspaces version bump
         run: |
           git fetch --unshallow origin
           deno run -A jsr:@deno/bump-workspaces@0.1.21/cli
         env:
-          GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GIT_USER_NAME: ${{ github.actor }}
           GIT_USER_EMAIL: ${{ github.actor}}@users.noreply.github.com
