--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,8 @@ name: Run tests
 on:
   pull_request:
     branches: [master, development]
+    types: [opened, ready_for_review]
+
   push:
     branches: [development]
 
