--- a/packages/pretch-core/deno.json
+++ b/packages/pretch-core/deno.json
@@ -1,6 +1,7 @@
 {
   "name": "@pretch/core",
   "version": "0.5.1",
+  "license": "MIT",
   "exports": {
     ".": "./mod.ts",
     "./middleware": "./middleware/mod.ts"
