--- a/packages/pretch-preact/deno.json
+++ b/packages/pretch-preact/deno.json
@@ -8,6 +8,7 @@
   "imports": {
     "@preact/signals": "npm:@preact/signals@^1.3.0",
     "preact": "npm:preact@^10.24.1",
+    "@testing-library/preact": "https://esm.sh/@testing-library/preact@3.2.4",
     "@/": "./"
   },
   "exports": {
