feat(react): Created same hooks from preact version

--- a/packages/pretch-react/deno.json
+++ b/packages/pretch-react/deno.json
@@ -6,6 +6,7 @@
     ".": "./mod.ts"
   },
   "imports": {
-    "@/": "./"
+    "@/": "./",
+    "@preact/signals-react": "npm:@preact/signals-react@^2.2.0"
   }
 }
