--- a/packages/pretch-react/deno.json
+++ b/packages/pretch-react/deno.json
@@ -7,6 +7,8 @@
   },
   "imports": {
     "@/": "./",
-    "@preact/signals-react": "npm:@preact/signals-react@^2.2.0"
+    "@preact/signals-react": "npm:@preact/signals-react@^2.2.0",
+    "preact": "npm:preact@^10.24.1",
+    "react": "npm:react@^18.3.1"
   }
 }
